<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorOnPrimaryContainer">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorOnPrimary"/>

    <EditText
        android:id="@+id/etRepeticiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeticiones"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorOnPrimary"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_opcional"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorOnPrimary"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etDuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duracion_opcional"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorOnPrimary"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnActualizarEjercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/actualizar_ejercicio"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/volver"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>