<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:background="?attr/colorOnPrimaryContainer">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/tvAjustesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajustes"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollViewAjustes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvIdioma"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idioma"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"/>

            <Spinner
                android:id="@+id/spinnerIdioma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvTema"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apariencia"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginTop="24dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchTema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modo_oscuro"
                android:layout_marginTop="8dp"
                android:textColor="?attr/colorOnPrimary"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>